--- a/Source/TailwindTraders.ShippingManagement.CustomSkill/source/requirements.txt
+++ b/Source/TailwindTraders.ShippingManagement.CustomSkill/source/requirements.txt
@@ -1,5 +1,5 @@
 azure-functions
-azure-storage==0.36.0
+azure-storage-blob==12.6.0
 azure-functions-worker==1.0.0b11
 singleton-decorator==1.0.0
 applicationinsights==0.11.9
