--- a/Source/TailwindTraders.ShippingManagement.CustomSkill/source/shared_code/config/settings.json
+++ b/Source/TailwindTraders.ShippingManagement.CustomSkill/source/shared_code/config/settings.json
@@ -1,6 +1,5 @@
 {
-    "STORAGE_ACCOUNTNAME": "",
-    "STORAGE_KEY": "",
+    "STORAGE_CONNECTION_STRING": "",
     "STORAGE_CONTAINER_NAME": "",
     "COMPUTERVISION_KEY": "",
     "COMPUTERVISION_ENDPOINT": ""
